<resources>
    <string name="mapBoxAcessToken">pk.eyJ1IjoiZXF1aXBhc28xIiwiYSI6ImNrMnhhMjg0YzA5cmEzanBtNndxejQ0ZWgifQ.QLRB9ZbTIevBBxwNYvjelw</string>
    <string name="app_name">Inkler</string>
    <string name="inkler">Inkler</string>
    <string name="nombre_artistico">Artist name:</string>
    <string name="instagram">Instagram:</string>
    <string name="email">Email:</string>
    <string name="web">Web:</string>
    <string name="sobre_el_tatuador">Webs</string>
    <string name="telefono">Phone:</string>
    <string name="nombre">Name:</string>
    <string name="direcci_n">Address:</string>
    <string name="atras">Back</string>
    <string name="a_adir_estudio">New studio</string>
    <string name="a_adir_tatuador">New tattoo artist</string>
    <string name="a_adir_foto">New Photo</string>
    <string name="modificar_tatuador">Edit tattoo artist</string>
    <string name="modificar_estudio">Edit studio</string>
    <string name="eliminar_tatuador">Erase tattoo artist</string>
    <string name="eliminar_estudio">Erase studio</string>
    <string name="apellidos">Surname:</string>
    <string name="latitud">Latitude:</string>
    <string name="Longitud">Longitude:</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="labelrvtatuadores">List of tattooists</string>
    <string name="tattoo_studio">Tattoo studio</string>
    <string name="labelfichatatuador">Tattoo artist</string>
    <string name="labelgaleiratatuador">Gallery</string>
    <string name="labelanadirtatuador">Add/Modify Tattooist</string>
    <string name="labelanadirestudio">Add/Modify Study</string>
    <string name="labelnavegador">Navigator</string>
    <string name="contraseña">1234</string>
    <string name="contraseñatitle">Password</string>
    <string name="contraseñabtn">Log in</string>
    <string name="ModificarTatuador">Modify Tattooist</string>
    <string name="labelFichaEstudio">Studio</string>
    <string name="nuevaWeb">New Web</string>
    <string name="log_successful">Logged in successfully</string>
    <string name="log_unsuccessful">Could not log in</string>
    <string name="fill_all">Please fill all the fields</string>
    <string name="tatoo">Tatoo</string>
    <string name="add">Add</string>
    <string name="anadir">add</string>
    <string name="estudio">The Study </string>
    <string name="modificado"> has been modify</string>
    <string name="creado"> has been created</string>
    <string name="borrada"> has been erased </string>
    <string name="tatuador">Tattoer </string>
    <string name="cambios">Changes has been coreectly change </string>
    <string name="foto">The photo </string>
    <string name="id">id</string>
    <string name="idEstudio">idEstudio</string>
    <string name="idTatuador">idTatuador</string>
    <string name="url">url</string>
    <string name="tel">tel:</string>
    <string name="omg">OMG!</string>
    <string name="data">data</string>


</resources>
