<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/añadir"
        android:visible="false">
        <item
            android:id="@+id/añadir_tatuador"
            android:title="@string/a_adir_tatuador"
            app:showAsAction="never" />
        <item
            android:id="@+id/añadir_estudio"
            android:title="@string/a_adir_estudio"
            app:showAsAction="never" />
    </group>
    <group android:id="@+id/modificar"
        android:visible="false">
    <item
            android:id="@+id/modificar_tatuador"
            android:title="@string/modificar_tatuador"
            app:showAsAction="never" />
        <item
            android:id="@+id/modificar_estudio"
            android:title="@string/modificar_estudio"
            app:showAsAction="never" />
    </group>
</menu>
